--- a/src/ClientApp/ForgotPass.resx
+++ b/src/ClientApp/ForgotPass.resx
@@ -117,4 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAABgLAAAYCwAAAAEAAAAB
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMDAwAAAAAAEBAQAAwcIAAlISAAJycnACAgIAAqKioAFCszAAQe
+        MQABJ0IAIUlWAERERABOTk0ANTU1ACRQXQAiQ00APj4+AENGSAAENFUABDVYAAY0VgAENFUABDRWACVS
+        YAAmU2EAEDJEAAc9ZAAaS24ALVFrAC1RbAAtUm0ALlJsADBMYQAyboAANWJyAF5eXgBdXV0AV1dXAFJe
+        YgBPbHQASnF8AEpzfwBLc38ATHN9AFhiZQB2fX8Aenp6AH19fQB/f38AM1SFADJXhAA4UJIAOVGUADtU
+        mQA5ZIQAOGyPADxqigA0coUAN3mOADdwkQBOdoIAS0XCAExGxgBPS84AT0zOAE+GlgBAg6QAQIOlAEGE
+        pwBFk6sARZe0AEabuQBphY4AaYaPAGqHkQB/i48Ac5mlAHiapQBNrcwAUbPSAFG11ABSttUAVbzcAFrH
+        5wBYx+kAWcjrAFvI6gBbyesAWsrsAFrK7QBcyewAXM3vAF3M7gBdzu8AXM7xAF7Q8gBd0PQAXtD0AF/R
+        9QBf1PkAYNP3AGDT+ABg1PgAYdT5AGLY/ABi2f0AjIyMAImJiQCBgIAAgYGBAIKCggCFh4cAh4eHAIiI
+        iACMjIwAjY2NAI6OjgCBjZAAkI+PAJGRkQCWm5wAmJiYAKKiogCkpKQArKqpAK6urgC0tLQAt7e3ALi2
+        tQC9u7oAvbu7AMXFxQDHxsYAyMjIAM7NzQDOzs4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAADSdAQEBAQEBAQEBAPx8gDhRbbGxsbGxsbGxsbGYoIRodW2pqampqampqampmMCUbHVtqampq
+        ampqampqZjAlGB1bampqampqbGxsbGYwJRgdW2pqampqYllZWVlfMCUYHVtqampqZT06Ozs5QTAiGB1g
+        bGprbGI3REVGQzcxPBgQWGRfW1taTEhKSkhNQj4YCBVSU05QTkdibm5uaTAlGwAJhoeCgod+S1dVV1Qt
+        Jg8ADISAdnd/hDNReywydhcEAAmDgXh4eHh8iYx0eH0SAAAHESp0dHR0dHQ0eHETCwAAAAMpiYuLi4uL
+        i4xwBQAAAAADFjU1NTU1NTV0KwUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACAAAAAgAAAAIABAACAAQAAwAMAAMADAAA=
+</value>
+  </data>
 </root>
