--- a/src/ClientApp/Forms UI/FileApp.resx
+++ b/src/ClientApp/Forms UI/FileApp.resx
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:1807306a8dfa337cd853ed417eefe7718160fd62ed81ea20dd4a1234df9a12bd
-size 8012
+oid sha256:3acf5fe448aed7e9890c2d3711006b57b42f54e6d7b1c8084fbbd8cace051049
+size 143845942
