--- a/src/ClientApp/Forms UI/ForgotPass.resx
+++ b/src/ClientApp/Forms UI/ForgotPass.resx
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:8b681c35afa8a67bcc48a513b82ccb27d53855105a50d65f8891364574300ea8
-size 8160
+oid sha256:15ec7bba822329255a88f478ab5b3c8ed8d29fa07ffbcda34fb6bd4fcc735a71
+size 1808808
