--- a/src/ClientApp/Forms UI/SignUp.resx
+++ b/src/ClientApp/Forms UI/SignUp.resx
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:a122f3e718c7a26b3b21f292ae61305dc66838bb76b93ed6a7669b2ab4ca3432
-size 5748
+oid sha256:d7cecec5b0f2e3949a729a3ae45937497a9f9a15ec85a1ec5fcb11e297b63baf
+size 1810322
